# um-startup-manager

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
landing-page/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
landing-page/src/: App.vue
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/startup/: icon.rs  manager.rs  mod.rs  monitor.rs  scanner.rs  settings.rs
src/components/: StartupItem.vue  StartupList.vue  TitleBar.vue
src/types/: startup.ts
